<resources>
    <string name="app_name">So Yummy Recipes</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_myrecipes">My Recipes</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_privacypolicy">Privacy Policy </string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="feedback">Feedback</string>


    <string name="aboutus">So Yummy Recipes is your smart cooking sidekick, offering personalized guidance every step of the way. From recipe recommendations just for you, to handy tools and helpful videos, Yummly has everything you need to improve life in the kitchen. Experience what millions are enjoying on the web, free on your Android device.
        ></string>
</resources>
